New feature: support for a parameter to switch the template theme.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ coverage/**/*
 .aws-sam
 .bundle/**/*
 samconfig.toml
-themes/**/*
+themes/**/*/
 !themes/default/
+!themes/default.theme/
 .gitmodules
 spec/*
