--- a/template.yaml
+++ b/template.yaml
@@ -4,7 +4,11 @@ Description: >
   menu-driver
 
 Parameters:
-  StackName:
+  Domain:
+    Type: String
+  Stack:
+    Type: String
+  Theme:
     Type: String
   SinglePlatformClientId:
     Type: String
@@ -18,7 +22,9 @@ Globals:
     MemorySize: 256
     Environment:
       Variables:
-        STACK_NAME: !Ref 'StackName'
+        DOMAIN_NAME: !Ref 'Domain'
+        STACK_NAME: !Ref 'Stack'
+        THEME: !Ref 'Theme'
         SINGLE_PLATFORM_CLIENT_ID: !Ref 'SinglePlatformClientId'
         SINGLE_PLATFORM_CLIENT_SECRET: !Ref 'SinglePlatformClientSecret'
 
@@ -40,7 +46,7 @@ Resources:
   MenusBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Join ['-', ['menu-driver', !Ref 'StackName']]
+      BucketName: !Join ['.', [!Ref 'Stack', !Ref 'Domain']]
       AccessControl: PublicRead
       WebsiteConfiguration:
         IndexDocument: index.html
@@ -67,9 +73,6 @@ Outputs:
   DataApi:
     Description: "API Gateway endpoint URL for Prod stage for menus_data function"
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/menus_data/"
-  MenusDataFunction:
-    Description: "menus_data Lambda Function ARN"
-    Value: !GetAtt MenusDataFunction.Arn
-  DataFunctionIamRole:
-    Description: "Implicit IAM Role created for menus_data function"
-    Value: !GetAtt MenusDataFunction.Arn
+  MenusBucket:
+    Description: "S3 bucket for storing generated restaurant menu HTML and assets"
+    Value: !GetAtt MenusBucket.Arn
