--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ themes/**/*/
 !themes/standard.theme/
 !themes/default.theme/
 .gitmodules
+cache/**/*
+data/**/*
 
 docs-src/.sass-cache
 docs-src/.jekyll-cache
