Run Menu Driver in Lambda!
Fixed a few details and now it can run in Lambda again.  It broke after adding binary dependencies.  And the system for reading options.yml files was only set up for the CLI and not for Lambda, but now it runs in both.  TODO: DRY that.

--- a/template.yaml
+++ b/template.yaml
@@ -22,7 +22,7 @@ Globals:
     MemorySize: 256
     Environment:
       Variables:
-        DOMAIN_NAME: !Ref 'Domain'
+        DOMAIN: !Ref 'Domain'
         STACK: !Ref 'Stack'
         THEME: !Ref 'Theme'
         SINGLE_PLATFORM_CLIENT_ID: !Ref 'SinglePlatformClientId'
@@ -35,7 +35,9 @@ Resources:
       CodeUri: ./
       Handler: lambda.generate_location
       Runtime: ruby2.5
-      Policies: AmazonS3FullAccess
+      Policies:
+        - AmazonS3FullAccess
+        - ComprehendBasicAccessPolicy: {}
       Events:
         Data:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
